# GoatVaultServer

./: .env.example  .gitignore  Dockerfile.build  README.md  pyproject.toml  requirements.txt  terraform.tfstate
.github/workflows/: main.yml  test-aws.yml
app/: __init__.py  auth.py  database.py  exceptions.py  lambda_handler.py  main.py  token_utils.py  validators.py
app/database/: __init__.py  database.py
app/middleware/: __init__.py  logging.py  logging_middleware.py
app/models/: __init__.py  auth_model.py  base.py  jwt_model.py  token_model.py  user_model.py  vault_model.py
app/routes/: __init__.py  auth_route.py  token_route.py  user_route.py  vault_route.py
app/utils/: __init__.py  auth.py  exceptions.py  validators.py
infra/: .gitignore  backend.tf  main.tf
terraform/: backend.tf  main.tf  output.tf  variables.tf
tests/: conftest.py  test_auth.py  test_base.py  test_database.py  test_jwt.py  test_main.py  test_mfa.py  test_middleware.py  test_user_routes.py  test_validators.py  test_vault_routes.py
